force-app/main/default/objects/Account/fields/aD_Comment_or_Message__c.field-meta.xml
<CustomField>
    <fullName>aD_Comment_or_Message__c</fullName>
    <description>Maps to a field in Form assembly</description>
    <label>Comment or Message</label>
    <type>TextArea</type>
</CustomField>