force-app/main/default/objects/Account/fields/aD_I_want_to_know_more_about__c.field-meta.xml
<CustomField>
    <fullName>aD_I_want_to_know_more_about__c</fullName>
    <description>Maps to a field in Form assembly</description>
    <label>I want to know more about</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client/Dog Team Certification</fullName>
            </value>
            <value>
                <fullName>Trainer Certification</fullName>
            </value>
            <value>
                <fullName>Team Facilitator Certification</fullName>
            </value>
            <value>
                <fullName>Volunteering</fullName>
            </value>
            <value>
                <fullName>Sponsorship/Donations</fullName>
            </value>
            <value>
                <fullName>General Info/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>