force-app/main/default/objects/Account/fields/Assigned_Courses__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Courses__c</fullName>
    <label>Assigned Courses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>