force-app/main/default/objects/Account/fields/Assigned_Volunteer_Roles__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volunteer_Roles__c</fullName>
    <description>List of roles assigned to volunteer as part of onboarding</description>
    <label>Assigned Volunteer Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>