force-app/main/default/objects/Account/fields/assignedCourses__c.field-meta.xml
<CustomField>
    <fullName>assignedCourses__c</fullName>
    <description>This variable is populated from flow - CourseAssigned class</description>
    <label>assignedCourses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>