force-app/main/default/objects/Account/fields/Background_check_notes__c.field-meta.xml
<CustomField>
    <fullName>Background_check_notes__c</fullName>
    <label>Background check notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>