force-app/main/default/objects/Account/fields/Background_Check_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Requested_Date__c</fullName>
    <label>Background Check Requested Date</label>
    <type>Date</type>
</CustomField>