force-app/main/default/objects/Account/fields/Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Member</label>
    <type>Checkbox</type>
</CustomField>