force-app/main/default/objects/Account/fields/Board_Member_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Board_Member_Accepted_Date__c</fullName>
    <label>Board Member Accepted Date</label>
    <type>Date</type>
</CustomField>