force-app/main/default/objects/Account/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Client__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Client Name)</relationshipLabel>
    <relationshipName>Accounts_Client_Name</relationshipName>
    <type>Lookup</type>
</CustomField>