force-app/main/default/objects/Account/fields/Client_Status_PKlst__c.field-meta.xml
<CustomField>
    <fullName>Client_Status_PKlst__c</fullName>
    <label>Trainer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Screening</fullName>
            </value>
            <value>
                <fullName>Not Fit</fullName>
            </value>
            <value>
                <fullName>Initial Interview Setup</fullName>
            </value>
            <value>
                <fullName>Back Ground Check in Progress</fullName>
            </value>
            <value>
                <fullName>On Temporary Hold</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Course Work - In Progress</fullName>
            </value>
            <value>
                <fullName>Course Work - Completed</fullName>
            </value>
            <value>
                <fullName>Onboarding - Training agreement and Site update</fullName>
            </value>
            <value>
                <fullName>Acttive</fullName>
            </value>
            <value>
                <fullName>No More Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>