force-app/main/default/objects/Account/fields/Crime_Conviction_Notes__c.field-meta.xml
<CustomField>
    <fullName>Crime_Conviction_Notes__c</fullName>
    <label>Criminal Conviction Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>