force-app/main/default/objects/Account/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator</label>
    <type>Checkbox</type>
</CustomField>