force-app/main/default/objects/Account/fields/Facilitator_application_received__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_application_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facilitator application received</label>
    <type>Checkbox</type>
</CustomField>