force-app/main/default/objects/Account/fields/Facilitator_Interview_End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Interview_End_DateTime__c</fullName>
    <label>Facilitator Interview End DateTime</label>
    <type>DateTime</type>
</CustomField>