force-app/main/default/objects/Account/fields/Facilitator_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facilitator Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Facilitator Name)</relationshipLabel>
    <relationshipName>Accounts_Facilitator_Name</relationshipName>
    <type>Lookup</type>
</CustomField>