force-app/main/default/objects/Account/fields/Facilitator_Onboarding_Remainder_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Onboarding_Remainder_Date__c</fullName>
    <label>Facilitator Onboarding Remainder Date</label>
    <type>Date</type>
</CustomField>