force-app/main/default/objects/Account/fields/Facilitator_provision_details__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_provision_details__c</fullName>
    <label>Facilitator provision details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>