force-app/main/default/objects/Account/fields/Facilitator_Status__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Status__c</fullName>
    <label>Facilitator Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Background Check In progress</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Not considering</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>On boarding</fullName>
            </value>
            <value>
                <fullName>Provisionally active</fullName>
            </value>
            <value>
                <fullName>Provisionally selected</fullName>
            </value>
            <value>
                <fullName>Scheduled Interview</fullName>
            </value>
            <value>
                <fullName>Training course and workshop pending completion</fullName>
                <label>Training course &amp; Workshop pending completion</label>
            </value>
            <value>
                <fullName>Workshop pending completion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>