force-app/main/default/objects/Account/fields/Facilitator_Workshop_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Workshop_Schedule__c</fullName>
    <label>Facilitator Workshop Schedule</label>
    <type>DateTime</type>
</CustomField>