force-app/main/default/objects/Account/fields/Facilitator_WS_Country__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_WS_Country__c</fullName>
    <label>Facilitator WS Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>