force-app/main/default/objects/Account/fields/Facilitator_WS_Location_Address1__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_WS_Location_Address1__c</fullName>
    <label>Facilitator WS Location Address1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>