force-app/main/default/objects/Account/fields/Facilitator_WS_Location_City__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_WS_Location_City__c</fullName>
    <label>Facilitator WS Location City</label>
    <length>70</length>
    <type>Text</type>
</CustomField>