force-app/main/default/objects/Account/fields/Facilitator_WS_State__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_WS_State__c</fullName>
    <label>Facilitator WS State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>