force-app/main/default/objects/Account/fields/Facilitator_WS_Zip__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_WS_Zip__c</fullName>
    <label>Facilitator WS Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>