force-app/main/default/objects/Account/fields/Facitator_Agreement_Recieved_Date__c.field-meta.xml
<CustomField>
    <fullName>Facitator_Agreement_Recieved_Date__c</fullName>
    <label>Facitator Agreement Recieved Date</label>
    <type>Date</type>
</CustomField>