force-app/main/default/objects/Account/fields/Handler_Exists__c.field-meta.xml
<CustomField>
    <fullName>Handler_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handler Exists</label>
    <type>Checkbox</type>
</CustomField>