force-app/main/default/objects/Account/fields/I_Want_to_Know_More_About__c.field-meta.xml
<CustomField>
    <fullName>I_Want_to_Know_More_About__c</fullName>
    <description>Maps to a field in Form assembly</description>
    <label>I want to know more about</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client/Dog Team Certification</fullName>
            </value>
            <value>
                <fullName>Trainer Certification</fullName>
            </value>
            <value>
                <fullName>Team Facilitator Certification</fullName>
            </value>
            <value>
                <fullName>Volunteering</fullName>
            </value>
            <value>
                <fullName>Sponsorship/Donations</fullName>
            </value>
            <value>
                <fullName>General Info/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>