force-app/main/default/objects/Account/fields/Lead_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Facilitator</label>
    <type>Checkbox</type>
</CustomField>