force-app/main/default/objects/Account/fields/Lead_Facilitator_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator_Status__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Facilitator Status</label>
    <type>Text</type>
</CustomField>