force-app/main/default/objects/Account/fields/Media_Release_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Media_Release_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Media Release Form Submitted</label>
    <type>Checkbox</type>
</CustomField>