force-app/main/default/objects/Account/fields/MI__c.field-meta.xml
<CustomField>
    <fullName>MI__c</fullName>
    <label>MI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>