force-app/main/default/objects/Account/fields/Microchip_Number__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MicrochipNumber</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>