force-app/main/default/objects/Account/fields/Phone_Other__c.field-meta.xml
<CustomField>
    <fullName>Phone_Other__c</fullName>
    <label>Phone Other</label>
    <type>Phone</type>
</CustomField>