force-app/main/default/objects/Account/fields/Phone_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Phone_Secondary__c</fullName>
    <label>Secondary Phone</label>
    <type>Phone</type>
</CustomField>