force-app/main/default/objects/Account/fields/Preferred_Phone_Test_Capable__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone_Test_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Phone Test Capable</label>
    <type>Checkbox</type>
</CustomField>