force-app/main/default/objects/Account/fields/Rejection_Note_after_Vol_Role_Interview__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Note_after_Vol_Role_Interview__c</fullName>
    <description>Rejection note after interview for the volunteer role</description>
    <label>Rejection Note after Vol Role Interview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>