force-app/main/default/objects/Account/fields/Secondary_Phone_Text_Capable__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_Text_Capable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Phone Text Capable</label>
    <type>Checkbox</type>
</CustomField>