force-app/main/default/objects/Account/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trainer</label>
    <type>Checkbox</type>
</CustomField>