force-app/main/default/objects/Account/fields/Trainer_Status__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Status__c</fullName>
    <formula>Null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trainer_Status</label>
    <type>Text</type>
</CustomField>