force-app/main/default/objects/Account/fields/Volunteer_Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Application_Submission_Date__c</fullName>
    <label>Volunteer Resume Submission Date</label>
    <type>Date</type>
</CustomField>