force-app/main/default/objects/Account/fields/Volunteer_Application_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Application_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteer Resume Submitted</label>
    <type>Checkbox</type>
</CustomField>