force-app/main/default/objects/Account/fields/Volunteer_Emergency_Contact_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Emergency_Contact_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Volunteer Emergency Contact  Submitted</label>
    <type>Checkbox</type>
</CustomField>