force-app/main/default/objects/Account/fields/Volunteer_Forms_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Forms_Submission_Date__c</fullName>
    <label>Volunteer Forms Submission Date</label>
    <type>Date</type>
</CustomField>