force-app/main/default/objects/Account/fields/Volunteer_Interview_Date_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interview_Date_End_Time__c</fullName>
    <label>Volunteer Interview Date &amp; End Time</label>
    <type>DateTime</type>
</CustomField>