force-app/main/default/objects/Account/fields/Volunteer_Interview_Date_Start_time__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interview_Date_Start_time__c</fullName>
    <label>Volunteer Interview Date &amp; Start time</label>
    <type>DateTime</type>
</CustomField>