force-app/main/default/objects/Account/fields/Volunteer_Interview_Notes__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Interview_Notes__c</fullName>
    <label>Volunteer Interview Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>