force-app/main/default/objects/Account/fields/Volunteer_provision_details__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_provision_details__c</fullName>
    <label>Volunteer provision details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>