force-app/main/default/objects/Account/fields/Volunteer_remainder_date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_remainder_date__c</fullName>
    <description>Volunteer decided to delay the onboarding. During the initial interview, this field is used to capture the remainder date if person would like Atlas to remind him.</description>
    <inlineHelpText>Please enter the remainder date if volunteer decided to delay the on boarding.</inlineHelpText>
    <label>Volunteer remainder date</label>
    <type>Date</type>
</CustomField>