force-app/main/default/objects/Account/fields/Volunteer_role_with_no_data_access__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_role_with_no_data_access__c</fullName>
    <label>Volunteer role with no data access</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academy</fullName>
            </value>
            <value>
                <fullName>ADI Accreditation</fullName>
            </value>
            <value>
                <fullName>Branding and Marketing</fullName>
            </value>
            <value>
                <fullName>Client Certification</fullName>
            </value>
            <value>
                <fullName>Community Outreach and Education</fullName>
            </value>
            <value>
                <fullName>Dog Availability</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Fund Development</fullName>
            </value>
            <value>
                <fullName>Governance and Compliance &amp; Operations</fullName>
            </value>
            <value>
                <fullName>Operations Master Docs</fullName>
            </value>
            <value>
                <fullName>Research and Development</fullName>
            </value>
            <value>
                <fullName>Scholarships</fullName>
            </value>
            <value>
                <fullName>State Registration</fullName>
            </value>
            <value>
                <fullName>Team Facilitator Certification</fullName>
            </value>
            <value>
                <fullName>Technology Infrastructure</fullName>
            </value>
            <value>
                <fullName>Trainer Certification</fullName>
            </value>
            <value>
                <fullName>Volunteer Recruitment and Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>