force-app/main/default/objects/Account/fields/Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Status__c</fullName>
    <label>Volunteer_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Onboarding Failed</fullName>
            </value>
            <value>
                <fullName>Background Check In progress</fullName>
            </value>
            <value>
                <fullName>Training in progress</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Delayed on boarding</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Not ready</fullName>
            </value>
            <value>
                <fullName>Scheduled Interview</fullName>
            </value>
            <value>
                <fullName>Not selected</fullName>
            </value>
            <value>
                <fullName>Account Provisioning requested</fullName>
            </value>
            <value>
                <fullName>On boarding aborted - Back ground Check failed</fullName>
            </value>
            <value>
                <fullName>Provisionally selected</fullName>
            </value>
            <value>
                <fullName>Course Provisioning Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>