force-app/main/default/objects/Account/fields/Where_Did_You_Hear_About_Us__c.field-meta.xml
<CustomField>
    <fullName>Where_Did_You_Hear_About_Us__c</fullName>
    <description>Maps to a field in Form assembly for the home page</description>
    <label>Where did you hear about us</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Search Engine</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Health Provider</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>